# ReasonBench

./: .env.example  .gitignore  README.md  pyproject.toml  test_setup_groq.md
notebooks/: results.ipynb  traces.ipynb  variance_analysis.ipynb
reasonbench/: __init__.py  datasets.py  typedefs.py  utils.py
reasonbench/judges/: judge1.py  judgeA.py  judgeB.py  judgeTestSuite.py  prev.py  testpy.py  testpy2.py
reasonbench/methods/: __init__.py  cot.py  cot_sc.py  got.py  io.py  rap.py  react.py  tot_bfs.py  tot_dfs.py
reasonbench/models/: __init__.py  anthropic.py  online.py  qroq.py
reasonbench/tasks/: __init__.py
reasonbench/tasks/game24/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/hle/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/hotpotqa/: __init__.py  agents.py  benchmark.py  environment.py  state.py
reasonbench/tasks/humaneval/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/judgelm/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/logiqa/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/matharena/: agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/scibench/: __init__.py  agents.py  benchmark.py  environment.py  prompts.py  state.py
reasonbench/tasks/sonnetwriting/: __init__.py  agents.py  (+3 more)
scripts/cached/: cached.py  cached.sh  groq_cached.sh
scripts/configs/: game24.yaml  hotpotqa.yaml  humaneval.yaml  judgelm.env  judgelm.yaml  matharena.env  scibench.yaml  sonnetwriting.yaml
scripts/repeats/: benchmarks.sh  methods.sh  methods_benchmarks.sh  methods_benchmarks_.sh  models.sh  models_benchmarks.sh  reasoning_effort.sh  repeats.py
scripts/simple/: groq_simple.sh  run_judgelm.sh  simple.py  simple.sh
src/: __init__.py
src/judges/: judge1.py  test_judge.py
src/methods/: foa.py
src/models/: api.py
tests/: conftest.py
tests/got/: test_game24.py  test_hotpotqa.py  test_humaneval.py  test_logiqa.py  test_sonnet_writing.py
tests/humaneval/: test_humaneval_framework.py
tests/logiqa/: test_logiqa_env_test.py
(+4 files in other folders)
